"Botão quase pronto"

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     </div>
     <form action="">
       <input type="email" id="email" placeholder="Email Address">
-      <input type="button" value="">
+      <input type="button" value="enviar" hidden>
+      <button id="custonBtn"><img src="images/icon-arrow.svg" alt=""></button>
     </form>
 
   </div>
