--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
       <p>Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay up-to-date with announcements and our launch deals.</p>      
     </div>
     <form action="">
-      <input type="email" id="email" placeholder="Email Address">
+      <input type="email" id="email" name="email" placeholder="Email Address" onblur="validationEmail()" maxlength="60" size="65">
       <input type="button" value="enviar" hidden>
       <button id="custonBtn"><img src="images/icon-arrow.svg" alt=""></button>
     </form>
+    <div id="error">
+      <img src="images/icon-error.svg" alt="error">
+      <p>O E-mail digitado não é válido!</p>
+    </div>
 
   </div>
   
