--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <title>Frontend Mentor | Base Apparel coming soon page</title>
+  <title>Project Nilber</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
@@ -37,12 +37,6 @@
         <p>O E-mail digitado não é válido!</p>
       </div>
     </div>
-    
-    <div id="error">
-      <img src="images/icon-error.svg" alt="error">
-      <p>O E-mail digitado não é válido!</p>
-    </div>
-
   </div>  
 
   <script src="script.js"></script>
